# scratchpad

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  build-frontend.sh  deploy.yml  env.sh  pyproject.toml
docker/: docker-compose.yml  nginx-default.conf  nginx-server.conf  scratchpad.service
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  cypress.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/cypress/support/: component.ts
frontend/src/: App.vue  crypto.ts  main.ts  mnemonic.ts  util.ts
frontend/src/assets/: main.scss
frontend/src/components/: HelloWorld.vue  MainContainer.vue
frontend/src/router/: index.ts
frontend/src/stores/: connection.ts  scratchpad.ts
frontend/src/views/: EditorView.vue  FilesView.vue  SettingsView.vue  StartView.vue
tests/: test_api.py
